[tool.poetry]
name = "hemato-tf-dataset"
version = "1.3.4"
description = ""
authors = ["Ali Moeeny <alimoeeny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow-datasets = "^4.8.3"
keras = "^2.11.0"
tensorflow = "^2.11.0"
pillow = "^9.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    ".",
    "tests",
    "integration",
]
