[tool.poetry]
name = "hemato-tf-dataset"
version = "1.4.16"
description = ""
authors = ["Ali Moeeny <alimoeeny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-datasets = "^4.9"
keras = "^3.5.0"
tensorflow = "^2.16.0"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    ".",
    "tests",
    "integration",
]
